EKS/Go/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-app
  labels:
    name: go-app
